# ai-leads-analyzer

./: .gitignore  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: ingress.py  ping.py
app/crud/: constants.py  crud_lead.py
app/db/: base.py  db.py  session.py
app/db/models/: __init__.py  leads_model.py
app/llm/: llm_client.py  llm_service.py
app/schemas/: __init__.py  egress_schema.py  ingress_schema.py  llm_schema.py  ping.py
