[project]
name = "ai-leads-analyzer"
version = "0.1.0"
description = "Backend for AI leads analyzer"
authors = [
    {name = "Ravindu Weerasinghe",email = "ravindutharuka2001@gmail.com"}
]
license = {text = "Apache"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic (>=1.15.2,<2.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "pydantic[email] (>=2.11.3,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "pytz (>=2025.2,<2026.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
